plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.group_name

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

base {
	archivesName = "${project.mod_id}-${project.minecraft_version}"
}

// Include generated resources
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	mavenLocal()
	maven {
		name = "ParchmentMC"
		url = "https://maven.parchmentmc.org/"
	}
	maven {
		name = "Jared's Maven" // JEI
		url = "https://maven.blamejared.com/"
	}
	maven {
		name = "Shedaniel's Maven" // REI
		url = "https://maven.shedaniel.me"
	}
	maven {
		name = "TerraformersMC" // ModMenu
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
		content {
			includeGroup "maven.modrinth"
		}
	}
	maven {
		name = "Curseforge Maven" // Jade
		url = "https://www.cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	maven {
		name = "Sleeping Town"
		url = "https://repo.sleeping.town/"
	}
	maven {
		name = "Ladysnake"
		url = "https://maven.ladysnake.org/releases"
	}
	maven {
		name = "Jitpack"
		url = "https://jitpack.io"
	}
	maven {
		name = "Devos Maven"
		url = "https://mvn.devos.one/snapshots/"
	}
}

dependencies {
	// Javax annotations (used by many TF classes)
	implementation "javax.annotation:javax.annotation-api:1.3.2"
	implementation "com.google.code.findbugs:jsr305:3.0.2"

	// Minecraft
	minecraft "com.mojang:minecraft:${minecraft_version}"

	// Mappings
	mappings loom.layered {
		it.officialMojangMappings { nameSyntheticMembers = false }
		it.parchment("org.parchmentmc.data:parchment-${parchment_minecraft_version}:${parchment_version}@zip")
	}

	// Fabric Loader
	modImplementation "net.fabricmc:fabric-loader:${loader_version}"

	// Fabric API
	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"

	// Porting-Lib modules (from Devos Maven) - bundled via jar-in-jar so players don't need it as a separate dependency
	def portingLibModules = [
		"core",
		"common",
		"base",
		"blocks",
		"client_events",
		"client_extensions",
		"config",
		"data",
		"entity",
		"fluids",
		"items",
		"level_events",
		"loot",
		"model_data",
		"model_loader",
		"models",
		"registry",
		"render_types",
		"resources",
		"tags",
		"transfer"
	]

	portingLibModules.each { module ->
		include(modImplementation "io.github.fabricators_of_create.Porting-Lib:${module}:${porting_lib_version}+${minecraft_version}")
	}

	// ModMenu for config screen
	modCompileOnly "com.terraformersmc:modmenu:${modmenu_version}"

	// Compat mods (compileOnly for optional mods)
	modCompileOnly "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"
	modCompileOnly "dev.emi:trinkets:${trinkets_version}"
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
	modCompileOnly "dev.emi:emi-fabric:${emi_version}+${minecraft_version}"

	// Jade (compileOnly + localRuntime for dev environment; not a mandatory dependency)
	modCompileOnly "maven.modrinth:jade:${jade_version}"
	modLocalRuntime "maven.modrinth:jade:${jade_version}"
}

loom {
	accessWidenerPath = file("src/main/resources/twilightforest.classtweaker")

	runs {
		data {
			client()
			configName = "Data Generation"
			runDir = "run/data"
			vmArg("-Dfabric-api.datagen")
			vmArg("-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}")
			vmArg("-Dfabric-api.datagen.modid=${mod_id}")
		}
	}
}

sourceSets.main.resources {
	srcDir 'src/generated/resources'
	exclude '.cache'
}

processResources {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	def ver = project.version
	inputs.property "version", ver

	filesMatching("fabric.mod.json") {
		expand([
			"version"             : ver,
			"loader_version"      : loader_version,
			"minecraft_version"   : minecraft_version,
			"fabric_api_version"  : fabric_api_version,
			"java_version"        : java.toolchain.languageVersion.get().asInt()
		])
	}
}

jar {
	manifest {
		attributes([
			'Specification-Title'     : mod_id,
			'Specification-Vendor'    : "TeamTwilight",
			'Specification-Version'   : "1",
			'Implementation-Title'    : project.name,
			'Implementation-Version'  : project.version,
			'Implementation-Vendor'   : "TeamTwilight",
			'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation,-this-escape"
	options.encoding = 'UTF-8'
}

// ============================================================================
// Fix jar-in-jar: sanitize every nested Porting-Lib module's fabric.mod.json.
//
// Loom's `include` flattens Porting-Lib modules into META-INF/jars but leaves
// each nested jar's own metadata intact. Problems this task corrects:
//   1. `porting_lib_core` depends on `porting_lib_gametest`, which is NOT
//      included here. Fabric Loader silently DROPS a nested mod whose
//      dependencies aren't satisfied (unlike top-level mods), cascading to ALL
//      porting-lib modules -> NoClassDefFoundError: ...DeferredRegister at runtime.
//   2. Nested modules reference `jars` entries that are ALSO bundled at the top
//      level (mixinextras) -> keep only the ones that only exist inside the
//      nested jar (e.g. night-config core/toml in porting_lib_config), otherwise
//      those bundled libraries never get loaded.
// This task drops any `depends` entry that isn't satisfied by the bundled
// modules or the base environment, and prunes duplicate `jars` entries.
// ============================================================================
def ENV_MOD_IDS = ['fabricloader', 'fabric-api', 'minecraft', 'java', 'mixinextras'] as Set

def stripNestedJarMetadata(byte[] nestedJarBytes, Set knownModIds, Set topLevelJarNames) {
	def out = new ByteArrayOutputStream()
	def zos = new java.util.zip.ZipOutputStream(out, java.nio.charset.StandardCharsets.UTF_8)
	def zin = new java.util.zip.ZipInputStream(new ByteArrayInputStream(nestedJarBytes), java.nio.charset.StandardCharsets.UTF_8)
	byte[] buf = new byte[8192]
	java.util.zip.ZipEntry entry
	while ((entry = zin.getNextEntry()) != null) {
		zos.putNextEntry(new java.util.zip.ZipEntry(entry.name))
		if (entry.name == 'fabric.mod.json') {
			def jsonBytes = new ByteArrayOutputStream()
			int m
			while ((m = zin.read(buf)) > 0) {
				jsonBytes.write(buf, 0, m)
			}
			def json = new groovy.json.JsonSlurper().parseText(new String(jsonBytes.toByteArray(), 'UTF-8'))
			// Keep `jars` entries that reference library jars bundled inside this
			// nested jar (e.g. night-config core/toml in porting_lib_config), but
			// drop entries whose file is already bundled at the top level
			// (e.g. mixinextras) to avoid duplicate loading.
			if (json.jars instanceof List) {
				def kept = json.jars.findAll { j ->
					def fname = (j.file ?: '').toString().tokenize('/').last()
					!topLevelJarNames.contains(fname)
				}
				if (kept.isEmpty()) {
					json.remove('jars')
				} else {
					json.jars = kept
				}
			}
			if (json.depends instanceof Map) {
				def filtered = [:]
				json.depends.each { k, v ->
					if (knownModIds.contains(k)) {
						filtered[k] = v
					}
				}
				if (filtered.isEmpty()) {
					json.remove('depends')
				} else {
					json.depends = filtered
				}
			}
			zos.write(groovy.json.JsonOutput.toJson(json).getBytes('UTF-8'))
		} else {
			int n
			while ((n = zin.read(buf)) > 0) {
				zos.write(buf, 0, n)
			}
		}
		zos.closeEntry()
	}
	zin.close()
	zos.close()
	return out.toByteArray()
}

tasks.named('remapJar') {
	doLast {
		def jarFile = archiveFile.get().asFile
		def tmpFile = File.createTempFile('twilightforest-fixed', '.jar')
		tmpFile.deleteOnExit()
		try {
			// Pass 1: collect the mod ids of every bundled nested jar so we can tell
			// which `depends` entries are actually satisfiable at runtime, plus the
			// file names already bundled at the top level.
			Set knownModIds = new HashSet(ENV_MOD_IDS)
			Set topLevelJarNames = new HashSet()
			def zf = new java.util.zip.ZipFile(jarFile, java.nio.charset.StandardCharsets.UTF_8)
			try {
				def collectEntries = zf.entries()
				byte[] cb = new byte[8192]
				while (collectEntries.hasMoreElements()) {
					def centry = collectEntries.nextElement()
					if (centry.isDirectory()) continue
					if (centry.name.startsWith('META-INF/jars/') && centry.name.endsWith('.jar')) {
						topLevelJarNames.add(centry.name.tokenize('/').last())
						def cis = zf.getInputStream(centry)
						def inner = new ByteArrayOutputStream()
						int cm
						while ((cm = cis.read(cb)) > 0) {
							inner.write(cb, 0, cm)
						}
						cis.close()
						def czin = new java.util.zip.ZipInputStream(new ByteArrayInputStream(inner.toByteArray()), java.nio.charset.StandardCharsets.UTF_8)
						try {
							def ce
							while ((ce = czin.getNextEntry()) != null) {
								if (ce.name == 'fabric.mod.json') {
									def cj = new ByteArrayOutputStream()
									int cn
									while ((cn = czin.read(cb)) > 0) {
										cj.write(cb, 0, cn)
									}
									def cjson = new groovy.json.JsonSlurper().parseText(new String(cj.toByteArray(), 'UTF-8'))
									if (cjson.id) {
										knownModIds.add(cjson.id as String)
									}
									break
								}
							}
						} finally {
							czin.close()
						}
					}
				}
			} finally {
				zf.close()
			}

			// Pass 2: rewrite the jar, sanitizing each nested jar's metadata.
			def zos = new java.util.zip.ZipOutputStream(new BufferedOutputStream(new FileOutputStream(tmpFile)), java.nio.charset.StandardCharsets.UTF_8)
			def zf2 = new java.util.zip.ZipFile(jarFile, java.nio.charset.StandardCharsets.UTF_8)
			byte[] buf = new byte[8192]
			try {
				def entries = zf2.entries()
				while (entries.hasMoreElements()) {
					def entry = entries.nextElement()
					if (entry.isDirectory()) continue
					zos.putNextEntry(new java.util.zip.ZipEntry(entry.name))
					def is = zf2.getInputStream(entry)
					try {
						if (entry.name.startsWith('META-INF/jars/') && entry.name.endsWith('.jar')) {
							def inner = new ByteArrayOutputStream()
							int m
							while ((m = is.read(buf)) > 0) {
								inner.write(buf, 0, m)
							}
							zos.write(stripNestedJarMetadata(inner.toByteArray(), knownModIds, topLevelJarNames))
						} else {
							int n
							while ((n = is.read(buf)) > 0) {
								zos.write(buf, 0, n)
							}
						}
					} finally {
						is.close()
					}
					zos.closeEntry()
				}
			} finally {
				zf2.close()
			}
			zos.close()
			jarFile.delete()
			if (!tmpFile.renameTo(jarFile)) {
				java.nio.file.Files.copy(tmpFile.toPath(), jarFile.toPath(), java.nio.file.StandardCopyOption.REPLACE_EXISTING)
				tmpFile.delete()
			}
			logger.lifecycle("Sanitized nested jar-in-jar metadata (stripped {} unsatisfied deps) from {}", 'jars', jarFile.name)
		} catch (Exception e) {
			throw new GradleException("Failed to sanitize nested jar-in-jar metadata from ${jarFile}", e)
		}
	}
}

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java
		}
	}
}